test/extern/sungeun/classes/extern_class_nl_extern_proc.good
(x = 5)
extern_class_nl_extern_proc.chpl:13: error: cannot pass non-local extern class to extern procedure
